# storage-oncall-agent-blueprint

./: .gitignore  BLUEPRINT-v1.md  BLUEPRINT.md  HOW-IT-WORKS.md  STORY.md  architecture.html
mds-interface-agent/: pyproject.toml
mds-interface-agent/app/: __init__.py  agent.py  config.py  demo.py  main.py
mds-interface-agent/skills/: mds-health-check.md  mds-interface-issues.md
mds-interface-agent/tests/: test_tools.py
mds-interface-agent/tools/: __init__.py  influxdb_client.py  influxdb_queries.py  influxdb_tools.py  mds_live.py  show_tech.py  skills.py  syslog.py
